# stream-write-ods

./: README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  setup.py  stream_write_ods.py  test_stream_write_ods.py
.circleci/: config.yml
.github/workflows/: test.yml
