[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stream-write-ods"
version = "0.0.23"
authors = [
  { name="Department for International Trade", email="sre@digital.trade.gov.uk" },
]
description = "Python function to construct an ODS spreadsheet on the fly - without having to store the entire file in memory or disk"
readme = "README.md"
requires-python = ">=3.7.1"
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Topic :: System :: Archiving :: Compression',
]
dependencies = [
    'stream-zip>=0.0.64',
]

[project.optional-dependencies]
dev = [
    "coverage",
    "pytest",
    "pytest-cov",
    "pandas-ods-reader",
]

[project.urls]
"Source" = "https://github.com/uktrade/stream-write-ods"

[tool.hatch.build]
include = [
  "stream_write_ods.py"
]
